syntax = "proto3";

package opd;

option go_package = "github.com/somnathbm/hospital-hms/microservices/opd-service/gen;opdpb";

import "google/api/annotations.proto";

service OPDService {
  rpc CheckAppointment(CheckAppointmentRequest) returns (CheckAppointmentResponse) {
    option (google.api.http) = {
      get: "/v1/opd/appointment/{appointment_id}/status"
    };
  }
  rpc StartConsultation(StartConsultationRequest) returns (StartConsultationResponse) {
    option (google.api.http) = {
      post: "/v1/opd/consultation/start",
      body: "*"
    };
  };
  rpc RecordDiagnosis(RecordDiagnosisRequest) returns (RecordDiagnosisResponse) {
    option (google.api.http) = {
      post: "/v1/opd/diagnosis/record",
      body: "*"
    };
  };
  rpc PrescribeTests(PrescribeTestsRequest) returns (PrescribeTestsResponse) {
    option (google.api.http) = {
      post: "/v1/opd/tests",
      body: "*"
    };
  };
  rpc GeneratePrescription(GeneratePrescriptionRequest) returns (GeneratePrescriptionResponse) {
    option (google.api.http) = {
      post: "/v1/opd/prescriptions",
      body: "*"
    };
  };
  rpc EndVisit(EndVisitRequest) returns (EndVisitResponse) {
    option (google.api.http) = {
      post: "/v1/opd/visit/end",
      body: "*"
    };
  }
}

message CheckAppointmentRequest {
  string patient_id = 1;
  string appointment_id = 2;
}

message CheckAppointmentResponse {
  bool valid = 1;
  string message = 2;
}

message StartConsultationRequest {
  string patient_id = 1;
  string doctor_id = 2;
  string appointment_id = 3;
}

message StartConsultationResponse {
  string visit_id = 1;
  string message = 2;
}

message RecordDiagnosisRequest {
  string visit_id = 1;
  string diagnosis = 2;
}

message RecordDiagnosisResponse {
  string message = 1;
}

message PrescribeTestsRequest {
  string visit_id = 1;
  repeated string test_names = 2;
}

message PrescribeTestsResponse {
  string message = 1;
}

message GeneratePrescriptionRequest {
  string visit_id = 1;
  repeated string medicines = 2;
}

message GeneratePrescriptionResponse {
  string prescription_id = 1;
  string message = 2;
}

message EndVisitRequest {
  string visit_id = 1;
}

message EndVisitResponse {
  string message = 1;
}
